(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -974,3 +974,5 @@ tags:
 -------------
 * [2017-07-03 读取注册表键值失败](/2017/07/03/reading-registry-values-fails)
 * [2017-07-04 读取注册表键值（临时解决办法）](/2017/07/04/reading-registry-values-workaround)
+* [2017-07-05 使用 PowerShell 类（一）](/2017/07/05/using-powershell-classes)
+* [2017-07-06 使用 PowerShell 类（二）](/2017/07/06/using-powershell-classes-2)
