(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -976,3 +976,6 @@ tags:
 * [2017-07-04 读取注册表键值（临时解决办法）](/2017/07/04/reading-registry-values-workaround)
 * [2017-07-05 使用 PowerShell 类（一）](/2017/07/05/using-powershell-classes)
 * [2017-07-06 使用 PowerShell 类（二）](/2017/07/06/using-powershell-classes-2)
+* [2017-07-07 查找 PowerShell 类](/2017/07/07/finding-powershell-classes)
+* [2017-07-10 查找 PowerShell 缺省变量（第一部分）](/2017/07/10/finding-powershell-default-variables-part-1)
+* [2017-07-11 查找 PowerShell 缺省变量（第二部分）](/2017/07/11/finding-powershell-default-variables-part-2)
