(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -979,3 +979,7 @@ tags:
 * [2017-07-07 查找 PowerShell 类](/2017/07/07/finding-powershell-classes)
 * [2017-07-10 查找 PowerShell 缺省变量（第一部分）](/2017/07/10/finding-powershell-default-variables-part-1)
 * [2017-07-11 查找 PowerShell 缺省变量（第二部分）](/2017/07/11/finding-powershell-default-variables-part-2)
+* [2017-07-12 查找 PowerShell 缺省变量（第三部分）](/2017/07/12/finding-powershell-default-variables-part-3)
+* [2017-07-13 清除所有用户变量](/2017/07/13/clearing-all-user-variables)
+* [2017-07-14 设置 Powershell 标题文本](/2017/07/14/setting-powershell-title-text)
+* [2017-07-17 Windows PowerShell 和 PowerShell Core](/2017/07/17/windows-powershell-and-powershell-core)
