(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -983,3 +983,6 @@ tags:
 * [2017-07-13 清除所有用户变量](/2017/07/13/clearing-all-user-variables)
 * [2017-07-14 设置 Powershell 标题文本](/2017/07/14/setting-powershell-title-text)
 * [2017-07-17 Windows PowerShell 和 PowerShell Core](/2017/07/17/windows-powershell-and-powershell-core)
+* [2017-07-19 查看 PowerShell 当前的文件系统路径](/2017/07/19/finding-powershell-s-current-file-system-path)
+* [2017-07-20 理解 PowerShell 和文件系统](/2017/07/20/understanding-powershell-and-system-paths)
+* [2017-07-21 当 Add-Type 失败之后](/2017/07/21/when-add-type-fails)
