(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -987,3 +987,7 @@ tags:
 * [2017-07-19 查看 PowerShell 当前的文件系统路径](/2017/07/19/finding-powershell-s-current-file-system-path)
 * [2017-07-20 理解 PowerShell 和文件系统](/2017/07/20/understanding-powershell-and-system-paths)
 * [2017-07-21 当 Add-Type 失败之后](/2017/07/21/when-add-type-fails)
+* [2017-07-24 在 PowerShell 标题栏中添加实时时钟（第一部分）](/2017/07/24/adding-live-clock-to-powershell-title-bar-part-1)
+* [2017-07-25 在 PowerShell 标题栏中添加实时时钟（第二部分）](/2017/07/25/adding-live-clock-to-powershell-title-bar-part-2)
+* [2017-07-26 简单解析设置文件（第一部分）](/2017/07/26/easy-parsing-of-setting-files-part-1)
+* [2017-07-27 简单解析设置文件（第二部分）](/2017/07/27/easy-parsing-of-setting-files-part-2)
