--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -991,3 +991,4 @@ tags:
 * [2017-07-25 在 PowerShell 标题栏中添加实时时钟（第二部分）](/2017/07/25/adding-live-clock-to-powershell-title-bar-part-2)
 * [2017-07-26 简单解析设置文件（第一部分）](/2017/07/26/easy-parsing-of-setting-files-part-1)
 * [2017-07-27 简单解析设置文件（第二部分）](/2017/07/27/easy-parsing-of-setting-files-part-2)
+* [2017-07-28 简单解析设置文件（第三部分）](/2017/07/28/easy-parsing-of-setting-files-part-3)
