(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -993,3 +993,7 @@ tags:
 * [2017-07-27 简单解析设置文件（第二部分）](/2017/07/27/easy-parsing-of-setting-files-part-2)
 * [2017-07-28 简单解析设置文件（第三部分）](/2017/07/28/easy-parsing-of-setting-files-part-3)
 * [2017-07-31 替换命令](/2017/07/31/replacing-commands)
+
+2017 年 08 月
+-------------
+* [2017-08-01 自动记录命令输出](/2017/08/01/auto-logging-command-output)
