(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -997,3 +997,6 @@ tags:
 2017 年 08 月
 -------------
 * [2017-08-01 自动记录命令输出](/2017/08/01/auto-logging-command-output)
+* [2017-08-02 查找已安装和缺失的更新（第一部分）](/2017/08/02/finding-installed-updates-and-searching-for-missing-part-1)
+* [2017-08-03 查找已安装和缺失的更新（第二部分）](/2017/08/03/finding-installed-updates-and-searching-for-missing-part-2)
+* [2017-08-04 查找已安装和缺失的更新（第三部分）](/2017/08/04/finding-installed-updates-and-searching-for-missing-part-3)
