--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1000,3 +1000,6 @@ tags:
 * [2017-08-02 查找已安装和缺失的更新（第一部分）](/2017/08/02/finding-installed-updates-and-searching-for-missing-part-1)
 * [2017-08-03 查找已安装和缺失的更新（第二部分）](/2017/08/03/finding-installed-updates-and-searching-for-missing-part-2)
 * [2017-08-04 查找已安装和缺失的更新（第三部分）](/2017/08/04/finding-installed-updates-and-searching-for-missing-part-3)
+* [2017-08-07 查找已安装和缺失的更新（第四部分）](/2017/08/07/finding-installed-updates-and-searching-for-missing-part-4)
+* [2017-08-08 在 Windows 10 中控制控制台的透明度](/2017/08/08/control-console-transparency-on-windows-10)
+* [2017-08-09 创建 HTML 报表（第一部分 - 创建 HTML）](/2017/08/09/creating-html-reports-part-1-creating-html)
