(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1003,3 +1003,7 @@ tags:
 * [2017-08-07 查找已安装和缺失的更新（第四部分）](/2017/08/07/finding-installed-updates-and-searching-for-missing-part-4)
 * [2017-08-08 在 Windows 10 中控制控制台的透明度](/2017/08/08/control-console-transparency-on-windows-10)
 * [2017-08-09 创建 HTML 报表（第一部分 - 创建 HTML）](/2017/08/09/creating-html-reports-part-1-creating-html)
+* [2017-08-10 创建 HTML 报表（第二部分 - 修复非字符串内容）](/2017/08/10/creating-html-reports-part-2-fixing-non-string-content)
+* [2017-08-11 创建 HTML 报表（第三部分 - 增加头部和尾部）](/2017/08/11/creating-html-reports-part-3-adding-headers-and-footers)
+* [2017-08-14 创建 HTML 报表（第四部分 - 重命名列）](/2017/08/14/creating-html-reports-part-4-renaming-columns)
+* [2017-08-15 创建 HTML 报表（第五部分 - 应用样式和设计）](/2017/08/15/creating-html-reports-part-5-applying-style-and-design)
