(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1007,3 +1007,6 @@ tags:
 * [2017-08-11 创建 HTML 报表（第三部分 - 增加头部和尾部）](/2017/08/11/creating-html-reports-part-3-adding-headers-and-footers)
 * [2017-08-14 创建 HTML 报表（第四部分 - 重命名列）](/2017/08/14/creating-html-reports-part-4-renaming-columns)
 * [2017-08-15 创建 HTML 报表（第五部分 - 应用样式和设计）](/2017/08/15/creating-html-reports-part-5-applying-style-and-design)
+* [2017-08-16 创建 Excel 报表（第一部分——黑白）](/2017/08/16/creating-excel-reports-part-1-black-and-white)
+* [2017-08-17 创建 Excel 报表（第二部分——彩色）](/2017/08/17/creating-excel-reports-part-2-colorful)
+* [2017-08-18 创建 Excel 报表（第三部分——独立操作工作簿）](/2017/08/18/creating-excel-reports-part-3-individually-accessing-workbook)
