(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1010,3 +1010,7 @@ tags:
 * [2017-08-16 创建 Excel 报表（第一部分——黑白）](/2017/08/16/creating-excel-reports-part-1-black-and-white)
 * [2017-08-17 创建 Excel 报表（第二部分——彩色）](/2017/08/17/creating-excel-reports-part-2-colorful)
 * [2017-08-18 创建 Excel 报表（第三部分——独立操作工作簿）](/2017/08/18/creating-excel-reports-part-3-individually-accessing-workbook)
+* [2017-08-21 获取 MAC 制造商列表](/2017/08/21/getting-mac-vendor-list)
+* [2017-08-22 增强版 Get-History 命令](/2017/08/22/a-better-get-history)
+* [2017-08-23 控制音量（静音和音量）](/2017/08/23/controlling-audio-mute-and-volume)
+* [2017-08-24 从 WikiQuote 搜集引用](/2017/08/24/scraping-quotes-from-wikiquote)
