(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1014,3 +1014,4 @@ tags:
 * [2017-08-22 增强版 Get-History 命令](/2017/08/22/a-better-get-history)
 * [2017-08-23 控制音量（静音和音量）](/2017/08/23/controlling-audio-mute-and-volume)
 * [2017-08-24 从 WikiQuote 搜集引用](/2017/08/24/scraping-quotes-from-wikiquote)
+* [2017-08-25 创建一个清单式的摘要对象](/2017/08/25/create-summary-objects-for-inventory)
