(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1015,3 +1015,6 @@ tags:
 * [2017-08-23 控制音量（静音和音量）](/2017/08/23/controlling-audio-mute-and-volume)
 * [2017-08-24 从 WikiQuote 搜集引用](/2017/08/24/scraping-quotes-from-wikiquote)
 * [2017-08-25 创建一个清单式的摘要对象](/2017/08/25/create-summary-objects-for-inventory)
+* [2017-08-28 轻量级 Robocopy](/2017/08/28/robocopy-light)
+* [2017-08-29 Get-Service 的替代](/2017/08/29/alternate-get-service)
+* [2017-08-30 禁止 Windows 10 中的 OneDrive](/2017/08/30/disable-onedrive-in-windows-10)
