(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1018,3 +1018,12 @@ tags:
 * [2017-08-28 轻量级 Robocopy](/2017/08/28/robocopy-light)
 * [2017-08-29 Get-Service 的替代](/2017/08/29/alternate-get-service)
 * [2017-08-30 禁止 Windows 10 中的 OneDrive](/2017/08/30/disable-onedrive-in-windows-10)
+* [2017-08-31 查找安装的软件](/2017/08/31/find-installed-software)
+
+2017 年 09 月
+-------------
+* [2017-09-01 注册缺省的 PowerShell 源](/2017/09/01/registering-default-powershell-repository)
+* [2017-09-04 探索 WMI](/2017/09/04/explore-wmi)
+* [2017-09-05 如何正确地封装多个结果](/2017/09/05/how-to-correctly-wrap-multiple-results)
+* [2017-09-06 查找所有 UAC 提权记录](/2017/09/06/finding-uac-elevations)
+* [2017-09-07 审计登录事件](/2017/09/07/auditing-logons)
