(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1027,3 +1027,6 @@ tags:
 * [2017-09-05 如何正确地封装多个结果](/2017/09/05/how-to-correctly-wrap-multiple-results)
 * [2017-09-06 查找所有 UAC 提权记录](/2017/09/06/finding-uac-elevations)
 * [2017-09-07 审计登录事件](/2017/09/07/auditing-logons)
+* [2017-09-08 解析完全限定名](/2017/09/08/parsing-distinguished-names)
+* [2017-09-11 PowerShell.exe 的“大括号秘密”](/2017/09/11/braces-secret-with-powershell-exe)
+* [2017-09-12 在 Linux 的 PowerShell Core 中安装模块](/2017/09/12/installing-modules-in-powershell-core-on-linux)
