(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1030,3 +1030,5 @@ tags:
 * [2017-09-08 解析完全限定名](/2017/09/08/parsing-distinguished-names)
 * [2017-09-11 PowerShell.exe 的“大括号秘密”](/2017/09/11/braces-secret-with-powershell-exe)
 * [2017-09-12 在 Linux 的 PowerShell Core 中安装模块](/2017/09/12/installing-modules-in-powershell-core-on-linux)
+* [2017-09-13 记录脚本输出](/2017/09/13/logging-script-output)
+* [2017-09-14 同时输出和赋值](/2017/09/14/outputting-amp-assigning-at-the-same-time)
