--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1032,3 +1032,8 @@ tags:
 * [2017-09-12 在 Linux 的 PowerShell Core 中安装模块](/2017/09/12/installing-modules-in-powershell-core-on-linux)
 * [2017-09-13 记录脚本输出](/2017/09/13/logging-script-output)
 * [2017-09-14 同时输出和赋值](/2017/09/14/outputting-amp-assigning-at-the-same-time)
+* [2017-09-15 使用在线帮助](/2017/09/15/using-online-help)
+* [2017-09-18 避免使用 Read-Host](/2017/09/18/avoid-read-host)
+* [2017-09-20 创建彩色的天气报告](/2017/09/20/creating-colorful-weather-report)
+* [2017-09-21 还原 TinyUrl 的真实地址](/2017/09/21/uncovering-tinyurls-true-origin)
+* [2017-09-22 高效统计文件数量（第一部分）](/2017/09/22/counting-files-efficiently-part-1)
