(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1037,3 +1037,6 @@ tags:
 * [2017-09-20 创建彩色的天气报告](/2017/09/20/creating-colorful-weather-report)
 * [2017-09-21 还原 TinyUrl 的真实地址](/2017/09/21/uncovering-tinyurls-true-origin)
 * [2017-09-22 高效统计文件数量（第一部分）](/2017/09/22/counting-files-efficiently-part-1)
+* [2017-09-25 高效统计文件数量（第二部分）](/2017/09/25/counting-files-efficiently-part-2)
+* [2017-09-26 计算文件夹大小](/2017/09/26/calculating-folder-file-size)
+* [2017-09-27 操作 PowerShell Gallery 内容](/2017/09/27/playing-with-powershell-gallery-content)
