--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1040,3 +1040,4 @@ tags:
 * [2017-09-25 高效统计文件数量（第二部分）](/2017/09/25/counting-files-efficiently-part-2)
 * [2017-09-26 计算文件夹大小](/2017/09/26/calculating-folder-file-size)
 * [2017-09-27 操作 PowerShell Gallery 内容](/2017/09/27/playing-with-powershell-gallery-content)
+* [2017-09-28 获取缓存的凭据](/2017/09/28/getting-cached-credentials)
