(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1041,3 +1041,4 @@ tags:
 * [2017-09-26 计算文件夹大小](/2017/09/26/calculating-folder-file-size)
 * [2017-09-27 操作 PowerShell Gallery 内容](/2017/09/27/playing-with-powershell-gallery-content)
 * [2017-09-28 获取缓存的凭据](/2017/09/28/getting-cached-credentials)
+* [2017-09-29 查找 Windows 的产品密钥](/2017/09/29/finding-your-windows-product-key)
