(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1042,3 +1042,9 @@ tags:
 * [2017-09-27 操作 PowerShell Gallery 内容](/2017/09/27/playing-with-powershell-gallery-content)
 * [2017-09-28 获取缓存的凭据](/2017/09/28/getting-cached-credentials)
 * [2017-09-29 查找 Windows 的产品密钥](/2017/09/29/finding-your-windows-product-key)
+
+2017 年 10 月
+-------------
+* [2017-10-02 准备磁盘驱动器](/2017/10/02/repairing-disk-drives)
+* [2017-10-03 PowerShell 2 接近过期](/2017/10/03/powershell-2-now-considered-deprecated)
+* [2017-10-04 Launching Daily Tools via Alias](/2017/10/04/launching-daily-tools-via-alias)
