(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1048,3 +1048,4 @@ tags:
 * [2017-10-02 准备磁盘驱动器](/2017/10/02/repairing-disk-drives)
 * [2017-10-03 PowerShell 2 接近过期](/2017/10/03/powershell-2-now-considered-deprecated)
 * [2017-10-04 Launching Daily Tools via Alias](/2017/10/04/launching-daily-tools-via-alias)
+* [2017-10-05 移除 Windows 10 APP](/2017/10/05/removing-windows-10-applications)
