(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1050,3 +1050,5 @@ tags:
 * [2017-10-04 Launching Daily Tools via Alias](/2017/10/04/launching-daily-tools-via-alias)
 * [2017-10-05 移除 Windows 10 APP](/2017/10/05/removing-windows-10-applications)
 * [2017-10-06 将网络连接模式从私有网络切到公有网络（反之亦然）](/2017/10/06/changing-network-connection-mode-from-private-to-public-and-vice-versa)
+* [2017-10-09 来自 Microsoft 的免费电子书](/2017/10/09/free-ebooks-from-microsoft)
+* [2017-10-10 查找所有域控制器](/2017/10/10/find-all-domain-controllers)
