--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1052,3 +1052,5 @@ tags:
 * [2017-10-06 将网络连接模式从私有网络切到公有网络（反之亦然）](/2017/10/06/changing-network-connection-mode-from-private-to-public-and-vice-versa)
 * [2017-10-09 来自 Microsoft 的免费电子书](/2017/10/09/free-ebooks-from-microsoft)
 * [2017-10-10 查找所有域控制器](/2017/10/10/find-all-domain-controllers)
+* [2017-10-11 查找所有域控制器（不依赖于模块）](/2017/10/11/finding-all-domain-controllers-no-module-required)
+* [2017-10-12 转换奇怪的数据格式](/2017/10/12/converting-weird-data-formats)
