--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1055,3 +1055,4 @@ tags:
 * [2017-10-11 查找所有域控制器（不依赖于模块）](/2017/10/11/finding-all-domain-controllers-no-module-required)
 * [2017-10-12 转换奇怪的数据格式](/2017/10/12/converting-weird-data-formats)
 * [2017-10-13 评价事件日志信息](/2017/10/13/evaluating-event-log-information)
+* [2017-10-16 用管道将信息输出到 Excel](/2017/10/16/pipe-information-to-excel)
