(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1056,3 +1056,6 @@ tags:
 * [2017-10-12 转换奇怪的数据格式](/2017/10/12/converting-weird-data-formats)
 * [2017-10-13 评价事件日志信息](/2017/10/13/evaluating-event-log-information)
 * [2017-10-16 用管道将信息输出到 Excel](/2017/10/16/pipe-information-to-excel)
+* [2017-10-17 确定启动时间点和启动以来的时间](/2017/10/17/determine-boot-time-and-uptime)
+* [2017-10-18 远程确定启动时间点和启动以来的时间](/2017/10/18/determine-boot-time-and-uptime-remotely)
+* [2017-10-19 揭开错误处理的秘密](/2017/10/19/demystifying-error-handling)
