(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1059,3 +1059,7 @@ tags:
 * [2017-10-17 确定启动时间点和启动以来的时间](/2017/10/17/determine-boot-time-and-uptime)
 * [2017-10-18 远程确定启动时间点和启动以来的时间](/2017/10/18/determine-boot-time-and-uptime-remotely)
 * [2017-10-19 揭开错误处理的秘密](/2017/10/19/demystifying-error-handling)
+* [2017-10-20 补零](/2017/10/20/creating-leading-zeros)
+* [2017-10-23 Creating Balloon Tips Safely](/2017/10/23/creating-balloon-tips-safely)
+* [2017-10-24 创建 MD5 文件哈希](/2017/10/24/creating-md5-file-hashes)
+* [2017-10-25 查找重复的文件](/2017/10/25/finding-file-duplicates)
