(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1063,3 +1063,5 @@ tags:
 * [2017-10-23 Creating Balloon Tips Safely](/2017/10/23/creating-balloon-tips-safely)
 * [2017-10-24 创建 MD5 文件哈希](/2017/10/24/creating-md5-file-hashes)
 * [2017-10-25 查找重复的文件](/2017/10/25/finding-file-duplicates)
+* [2017-10-26 从文本生成 MD5 哈希](/2017/10/26/generating-md5-hashes-from-text)
+* [2017-10-27 对比从 PowerShell 远程处理中受到的计算机数据](/2017/10/27/comparing-computer-data-received-from-powershell-remoting)
