(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1065,3 +1065,5 @@ tags:
 * [2017-10-25 查找重复的文件](/2017/10/25/finding-file-duplicates)
 * [2017-10-26 从文本生成 MD5 哈希](/2017/10/26/generating-md5-hashes-from-text)
 * [2017-10-27 对比从 PowerShell 远程处理中受到的计算机数据](/2017/10/27/comparing-computer-data-received-from-powershell-remoting)
+* [2017-10-30 在 Active Directory 中使用 LDAP 过滤器](/2017/10/30/using-ldap-filters-in-active-directory)
+* [2017-10-31 创建自签名的代码签名证书](/2017/10/31/creating-self-signed-code-signing-certificates)
