(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1067,3 +1067,11 @@ tags:
 * [2017-10-27 对比从 PowerShell 远程处理中受到的计算机数据](/2017/10/27/comparing-computer-data-received-from-powershell-remoting)
 * [2017-10-30 在 Active Directory 中使用 LDAP 过滤器](/2017/10/30/using-ldap-filters-in-active-directory)
 * [2017-10-31 创建自签名的代码签名证书](/2017/10/31/creating-self-signed-code-signing-certificates)
+
+2017 年 11 月
+-------------
+* [2017-11-01 从 PFX 文件加载证书](/2017/11/01/loading-certificates-from-pfx-files)
+* [2017-11-02 对 PowerShell 脚本进行数字签名](/2017/11/02/digitally-signing-powershellscripts)
+* [2017-11-03 结合时间戳服务器使用数字签名](/2017/11/03/using-digital-signatures-with-timestamp-server)
+* [2017-11-06 一个更好（更快）的 Start-Job](/2017/11/06/a-better-and-faster-start-job)
+* [2017-11-07 Multipass: 安全存储多个凭据](/2017/11/07/multipass-securely-storing-multiple-credentials)
