(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1075,3 +1075,5 @@ tags:
 * [2017-11-03 结合时间戳服务器使用数字签名](/2017/11/03/using-digital-signatures-with-timestamp-server)
 * [2017-11-06 一个更好（更快）的 Start-Job](/2017/11/06/a-better-and-faster-start-job)
 * [2017-11-07 Multipass: 安全存储多个凭据](/2017/11/07/multipass-securely-storing-multiple-credentials)
+* [2017-11-08 压缩序列化的数据](/2017/11/08/compressing-serialized-data)
+* [2017-11-09 解压序列化的数据](/2017/11/09/uncompressing-serialized-data)
