(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1077,3 +1077,4 @@ tags:
 * [2017-11-07 Multipass: 安全存储多个凭据](/2017/11/07/multipass-securely-storing-multiple-credentials)
 * [2017-11-08 压缩序列化的数据](/2017/11/08/compressing-serialized-data)
 * [2017-11-09 解压序列化的数据](/2017/11/09/uncompressing-serialized-data)
+* [2017-11-10 从字符串中移除文本](/2017/11/10/removing-text-from-strings)
