(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1078,3 +1078,14 @@ tags:
 * [2017-11-08 压缩序列化的数据](/2017/11/08/compressing-serialized-data)
 * [2017-11-09 解压序列化的数据](/2017/11/09/uncompressing-serialized-data)
 * [2017-11-10 从字符串中移除文本](/2017/11/10/removing-text-from-strings)
+* [2017-11-13 多语言语音输出](/2017/11/13/multi-language-voice-output)
+* [2017-11-14 轻松记录脚本日志](/2017/11/14/script-logging-made-easy)
+* [2017-11-15 Working with [FileInfo] Object](/2017/11/15/working-with-fileinfo-object)
+* [2017-11-16 Getting File Extension](/2017/11/16/getting-file-extension)
+* [2017-11-20 临时禁用 PSReadLine 模块](/2017/11/20/temporarily-disabling-psreadline-module)
+* [2017-11-21 极简的错误处理](/2017/11/21/minimalistic-error-handling)
+* [2017-11-22 Understanding .NET Type Name Variants in PowerShell](/2017/11/22/understanding-net-type-name-variants-in-powershell)
+* [2017-11-23 从 .PSD1 文件中读取数据](/2017/11/23/reading-data-from-psd1-files)
+* [2017-11-24 在 PowerShell 5+ 中读取 .PSD1 文件](/2017/11/24/reading-data-from-psd1-files-in-powershell-5)
+* [2017-11-27 将哈希表转换为 JSON](/2017/11/27/converting-hash-tables-to-json)
+* [2017-11-28 在 PowerShell ISE 中切换注释](/2017/11/28/toggling-comments-in-powershell-ise)
