(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1089,3 +1089,9 @@ tags:
 * [2017-11-24 在 PowerShell 5+ 中读取 .PSD1 文件](/2017/11/24/reading-data-from-psd1-files-in-powershell-5)
 * [2017-11-27 将哈希表转换为 JSON](/2017/11/27/converting-hash-tables-to-json)
 * [2017-11-28 在 PowerShell ISE 中切换注释](/2017/11/28/toggling-comments-in-powershell-ise)
+* [2017-11-29 在 PowerShell ISE 中添加单行注释](/2017/11/29/adding-single-line-comments-in-powershell-ise)
+* [2017-11-30 高效创建新的对象](/2017/11/30/creating-new-objects-efficiently)
+
+2017 年 12 月
+-------------
+* [2017-12-01 为对象高效添加标记](/2017/12/01/tagging-objects-efficiently)
