(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1095,3 +1095,8 @@ tags:
 2017 年 12 月
 -------------
 * [2017-12-01 为对象高效添加标记](/2017/12/01/tagging-objects-efficiently)
+* [2017-12-04 比较数字列表](/2017/12/04/comparing-numeric-lists)
+* [2017-12-05 比较字符串列表](/2017/12/05/comparing-string-lists)
+* [2017-12-06 强制允许 PowerShell 脚本执行](/2017/12/06/allowing-powershell-script-execution---no-matter-what)
+* [2017-12-07 理解文本转换](/2017/12/07/understanding-text-conversions)
+* [2017-12-08 转换区域性特定的信息](/2017/12/08/converting-culture-specific-information)
