(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1100,3 +1100,7 @@ tags:
 * [2017-12-06 强制允许 PowerShell 脚本执行](/2017/12/06/allowing-powershell-script-execution---no-matter-what)
 * [2017-12-07 理解文本转换](/2017/12/07/understanding-text-conversions)
 * [2017-12-08 转换区域性特定的信息](/2017/12/08/converting-culture-specific-information)
+* [2017-12-11 将信息转换为区域性特定的文本](/2017/12/11/converting-information-to-culture-specific-text)
+* [2017-12-12 在 Grid View 窗口中垂直显示数据](/2017/12/12/displaying-data-in-a-grid-view-window-vertically)
+* [2017-12-13 测试运行 PowerShell 6 - 并行运行](/2017/12/13/test-drive-powershell-6-side-by-side)
+* [2017-12-14 将用户名转换为 SID](/2017/12/14/converting-user-name-to-sid)
