(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1104,3 +1104,6 @@ tags:
 * [2017-12-12 在 Grid View 窗口中垂直显示数据](/2017/12/12/displaying-data-in-a-grid-view-window-vertically)
 * [2017-12-13 测试运行 PowerShell 6 - 并行运行](/2017/12/13/test-drive-powershell-6-side-by-side)
 * [2017-12-14 将用户名转换为 SID](/2017/12/14/converting-user-name-to-sid)
+* [2017-12-15 格式化文本输出](/2017/12/15/formatting-text-output-1233637440)
+* [2017-12-18 覆盖 Execution Policy 设置](/2017/12/18/execution-policy-override)
+* [2017-12-19 将机器加入域](/2017/12/19/joining-computers-to-a-domain)
