(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1107,3 +1107,5 @@ tags:
 * [2017-12-15 格式化文本输出](/2017/12/15/formatting-text-output-1233637440)
 * [2017-12-18 覆盖 Execution Policy 设置](/2017/12/18/execution-policy-override)
 * [2017-12-19 将机器加入域](/2017/12/19/joining-computers-to-a-domain)
+* [2017-12-20 以 JSON 格式读取和保存选项](/2017/12/20/loading-and-saving-options-in-json-format)
+* [2017-12-21 使用 PowerShell 远程处理](/2017/12/21/playing-with-powershell-remoting)
