--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1109,3 +1109,4 @@ tags:
 * [2017-12-19 将机器加入域](/2017/12/19/joining-computers-to-a-domain)
 * [2017-12-20 以 JSON 格式读取和保存选项](/2017/12/20/loading-and-saving-options-in-json-format)
 * [2017-12-21 使用 PowerShell 远程处理](/2017/12/21/playing-with-powershell-remoting)
+* [2017-12-22 通过 PowerShell 远程处理操作远程机器](/2017/12/22/accessing-remote-machines-via-powershell-remoting)
