--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1111,3 +1111,4 @@ tags:
 * [2017-12-21 使用 PowerShell 远程处理](/2017/12/21/playing-with-powershell-remoting)
 * [2017-12-22 通过 PowerShell 远程处理操作远程机器](/2017/12/22/accessing-remote-machines-via-powershell-remoting)
 * [2017-12-25 在多台计算机中并行运行命令](/2017/12/25/running-commands-on-multiple-computers-in-parallel)
+* [2017-12-26 管理用户配置文件](/2017/12/26/managing-user-profiles)
