(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1112,3 +1112,5 @@ tags:
 * [2017-12-22 通过 PowerShell 远程处理操作远程机器](/2017/12/22/accessing-remote-machines-via-powershell-remoting)
 * [2017-12-25 在多台计算机中并行运行命令](/2017/12/25/running-commands-on-multiple-computers-in-parallel)
 * [2017-12-26 管理用户配置文件](/2017/12/26/managing-user-profiles)
+* [2017-12-27 删除用户配置文件](/2017/12/27/deleting-user-profiles)
+* [2017-12-28 在剪贴板中附加内容](/2017/12/28/appending-the-clipboard)
