(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1114,3 +1114,11 @@ tags:
 * [2017-12-26 管理用户配置文件](/2017/12/26/managing-user-profiles)
 * [2017-12-27 删除用户配置文件](/2017/12/27/deleting-user-profiles)
 * [2017-12-28 在剪贴板中附加内容](/2017/12/28/appending-the-clipboard)
+* [2017-12-29 设置环境变量](/2017/12/29/settingenvironmentvariables)
+
+2018 年
+=======
+
+2018 年 01 月
+-------------
+* [2018-01-01 删除环境变量](/2018/01/01/deleting-environment-variables)
