--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1122,3 +1122,4 @@ tags:
 2018 年 01 月
 -------------
 * [2018-01-01 删除环境变量](/2018/01/01/deleting-environment-variables)
+* [2018-01-02 按数据类型绑定参数](/2018/01/02/binding-parameters-by-data-type)
