(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1123,3 +1123,5 @@ tags:
 -------------
 * [2018-01-01 删除环境变量](/2018/01/01/deleting-environment-variables)
 * [2018-01-02 按数据类型绑定参数](/2018/01/02/binding-parameters-by-data-type)
+* [2018-01-03 在 PowerShell 函数中支持风险缓解](/2018/01/03/supporting-risk-mitigation-in-powershell-functions)
+* [2018-01-04 正确地导入 Excel 的 CSV 文件](/2018/01/04/correctly-importing-excel-csv-files)
