(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1125,3 +1125,4 @@ tags:
 * [2018-01-02 按数据类型绑定参数](/2018/01/02/binding-parameters-by-data-type)
 * [2018-01-03 在 PowerShell 函数中支持风险缓解](/2018/01/03/supporting-risk-mitigation-in-powershell-functions)
 * [2018-01-04 正确地导入 Excel 的 CSV 文件](/2018/01/04/correctly-importing-excel-csv-files)
+* [2018-01-05 使用缺省参数值](/2018/01/05/using-default-parametervalues)
