(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1126,3 +1126,5 @@ tags:
 * [2018-01-03 在 PowerShell 函数中支持风险缓解](/2018/01/03/supporting-risk-mitigation-in-powershell-functions)
 * [2018-01-04 正确地导入 Excel 的 CSV 文件](/2018/01/04/correctly-importing-excel-csv-files)
 * [2018-01-05 使用缺省参数值](/2018/01/05/using-default-parametervalues)
+* [2018-01-08 转换数字字符串](/2018/01/08/converting-numeric-strings)
+* [2018-01-09 用 Group-Object 区分远程处理结果](/2018/01/09/using-group-object-to-separate-remoting-results)
