(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1128,3 +1128,6 @@ tags:
 * [2018-01-05 使用缺省参数值](/2018/01/05/using-default-parametervalues)
 * [2018-01-08 转换数字字符串](/2018/01/08/converting-numeric-strings)
 * [2018-01-09 用 Group-Object 区分远程处理结果](/2018/01/09/using-group-object-to-separate-remoting-results)
+* [2018-01-10 理解和避免双跃点问题](/2018/01/10/understanding-and-avoiding-double-hop)
+* [2018-01-11 列出用户配置文件](/2018/01/11/list-user-profiles)
+* [2018-01-12 查找用户配置文件](/2018/01/12/find-user-profiles)
