(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1131,3 +1131,4 @@ tags:
 * [2018-01-10 理解和避免双跃点问题](/2018/01/10/understanding-and-avoiding-double-hop)
 * [2018-01-11 列出用户配置文件](/2018/01/11/list-user-profiles)
 * [2018-01-12 查找用户配置文件](/2018/01/12/find-user-profiles)
+* [2018-01-15 通过对话框移除用户配置文件](/2018/01/15/remove-user-profiles-via-dialog)
