(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1132,3 +1132,4 @@ tags:
 * [2018-01-11 列出用户配置文件](/2018/01/11/list-user-profiles)
 * [2018-01-12 查找用户配置文件](/2018/01/12/find-user-profiles)
 * [2018-01-15 通过对话框移除用户配置文件](/2018/01/15/remove-user-profiles-via-dialog)
+* [2018-01-16 通过对话框移除用户配置文件（第二部分）](/2018/01/16/removing-user-profiles-via-dialog-part-2)
