--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1135,3 +1135,4 @@ tags:
 * [2018-01-16 通过对话框移除用户配置文件（第二部分）](/2018/01/16/removing-user-profiles-via-dialog-part-2)
 * [2018-01-17 用网格视图窗口作为选择对话框（第一部分）](/2018/01/17/using-a-grid-view-window-as-a-selection-dialog-part-1)
 * [2018-01-18 用网格视图窗口作为选择对话框（第二部分）](/2018/01/18/using-a-grid-view-window-as-a-selection-dialog-part-2)
+* [2018-01-19 Efficiently Produce Comma-Separated Strings](/2018/01/19/efficiently-produce-comma-separated-strings)
