(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1135,4 +1135,7 @@ tags:
 * [2018-01-16 通过对话框移除用户配置文件（第二部分）](/2018/01/16/removing-user-profiles-via-dialog-part-2)
 * [2018-01-17 用网格视图窗口作为选择对话框（第一部分）](/2018/01/17/using-a-grid-view-window-as-a-selection-dialog-part-1)
 * [2018-01-18 用网格视图窗口作为选择对话框（第二部分）](/2018/01/18/using-a-grid-view-window-as-a-selection-dialog-part-2)
-* [2018-01-19 Efficiently Produce Comma-Separated Strings](/2018/01/19/efficiently-produce-comma-separated-strings)
+* [2018-01-19 快速创建逗号分隔的字符串（第 1 部分）](/2018/01/19/efficiently-produce-comma-separated-strings)
+* [2018-01-22 快速创建逗号分隔的字符串（第 2 部分）](/2018/01/22/efficiently-produce-comma-separated-strings-part-2)
+* [2018-01-23 用网格视图窗口显示列表视图（第 1 部分）](/2018/01/23/using-list-view-in-a-grid-view-window-part-1)
+* [2018-01-24 用网格视图窗口显示列表视图（第 2 部分）](/2018/01/24/using-list-view-in-a-grid-view-window-part-2)
