(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1139,3 +1139,7 @@ tags:
 * [2018-01-22 快速创建逗号分隔的字符串（第 2 部分）](/2018/01/22/efficiently-produce-comma-separated-strings-part-2)
 * [2018-01-23 用网格视图窗口显示列表视图（第 1 部分）](/2018/01/23/using-list-view-in-a-grid-view-window-part-1)
 * [2018-01-24 用网格视图窗口显示列表视图（第 2 部分）](/2018/01/24/using-list-view-in-a-grid-view-window-part-2)
+* [2018-01-25 用网格视图窗口显示列表视图（第 3 部分）](/2018/01/25/using-list-view-in-a-grid-view-window-part-3)
+* [2018-01-26 过滤文件](/2018/01/26/filtering-files)
+* [2018-01-29 格式化数字（第 1 部分）](/2018/01/29/formatting-numbers-part-1)
+* [2018-01-30 格式化数字（第 2 部分）](/2018/01/30/formatting-numbers-part-2)
