(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1143,3 +1143,8 @@ tags:
 * [2018-01-26 过滤文件](/2018/01/26/filtering-files)
 * [2018-01-29 格式化数字（第 1 部分）](/2018/01/29/formatting-numbers-part-1)
 * [2018-01-30 格式化数字（第 2 部分）](/2018/01/30/formatting-numbers-part-2)
+* [2018-01-31 通过 PowerShell 管理 FTP](/2018/01/31/managing-ftp-via-powershell)
+
+2018 年 02 月
+-------------
+* [2018-02-01 从 Windows 10 中移除臃肿的软件](/2018/02/01/removing-bloatware-from-windows-10)
