(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1148,3 +1148,8 @@ tags:
 2018 年 02 月
 -------------
 * [2018-02-01 从 Windows 10 中移除臃肿的软件](/2018/02/01/removing-bloatware-from-windows-10)
+* [2018-02-02 检查网络连接](/2018/02/02/checking-network-connections)
+* [2018-02-05 查找嵌套的 AD 组成员](/2018/02/05/finding-nested-ad-group-memberships)
+* [2018-02-06 简易的 WMI 浏览器](/2018/02/06/simple-wmi-browser)
+* [2018-02-07 用管道传递文件和文件夹](/2018/02/07/piping-files-and-folders)
+* [2018-02-08 将 PowerShell 脚本转换为批处理](/2018/02/08/converting-powershell-to-batch)
