(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1179,3 +1179,10 @@ tags:
 * [2018-03-09 备份事件日志](/2018/03/09/backing-up-event-logs)
 * [2018-03-12 终极快速的 Ping 命令](/2018/03/12/final-super-fast-ping-command)
 * [2018-03-13 正确地排序 IPv4 地址](/2018/03/13/sort-ipv4-addresses-correctly)
+* [2018-03-14 正确地对 IPv4 和 IPv6 地址排序](/2018/03/14/sort-ipv4-and-ipv6-addresses-correctly)
+* [2018-03-15 播放声音](/2018/03/15/playing-sounds)
+* [2018-03-16 播放声音文件](/2018/03/16/playing-sound-files)
+* [2018-03-19 合成语音（第 1 部分）](/2018/03/19/synthesizing-speech-part-1)
+* [2018-03-20 合成语音（第 2 部分）](/2018/03/20/synthesizing-speech-recording-to-file-part-2)
+* [2018-03-21 合成语音 – 使用语音合成标记语言 SSML（第 3 部分）](/2018/03/21/synthesizing-speech-using-speech-synthesis-markup-language-ssml-part-3)
+* [2018-03-22 语音合成 – 使用不同的语音（第 4 部分）](/2018/03/22/synthesizing-speech-using-different-voices-part-4)
