(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1186,3 +1186,6 @@ tags:
 * [2018-03-20 合成语音（第 2 部分）](/2018/03/20/synthesizing-speech-recording-to-file-part-2)
 * [2018-03-21 合成语音 – 使用语音合成标记语言 SSML（第 3 部分）](/2018/03/21/synthesizing-speech-using-speech-synthesis-markup-language-ssml-part-3)
 * [2018-03-22 语音合成 – 使用不同的语音（第 4 部分）](/2018/03/22/synthesizing-speech-using-different-voices-part-4)
+* [2018-03-23 安全地嵌入变量](/2018/03/23/safely-embedding-variables)
+* [2018-03-26 为控制台输出加下划线](/2018/03/26/using-underlined-console-output)
+* [2018-03-27 在同一行输出日志信息](/2018/03/27/output-log-messages-in-the-same-line)
