(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1189,3 +1189,14 @@ tags:
 * [2018-03-23 安全地嵌入变量](/2018/03/23/safely-embedding-variables)
 * [2018-03-26 为控制台输出加下划线](/2018/03/26/using-underlined-console-output)
 * [2018-03-27 在同一行输出日志信息](/2018/03/27/output-log-messages-in-the-same-line)
+* [2018-03-28 PowerShell 控制台光标定位](/2018/03/28/positioning-the-powershell-console-cursor)
+* [2018-03-29 在 PowerShell 控制台中使用颜色](/2018/03/29/using-colors-in-powershell-console)
+* [2018-03-30 对 Cmdlet 的输出着色](/2018/03/30/colorizing-cmdlet-output)
+
+2018 年 04 月
+-------------
+* [2018-04-02 下载脚本文件的最佳方式](/2018/04/02/the-best-ways-to-download-script-files)
+* [2018-04-03 执行策略和下载的脚本文件](/2018/04/03/execution-policy-and-downloaded-script-files)
+* [2018-04-04 信任下载的文件](/2018/04/04/trusting-downloaded-scripts)
+* [2018-04-05 检查数字签名](/2018/04/05/examining-digital-signature-signers)
+* [2018-04-06 用 PowerShell 操作 Chocolatey](/2018/04/06/using-chocolatey-with-powershell)
