(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1200,3 +1200,7 @@ tags:
 * [2018-04-04 信任下载的文件](/2018/04/04/trusting-downloaded-scripts)
 * [2018-04-05 检查数字签名](/2018/04/05/examining-digital-signature-signers)
 * [2018-04-06 用 PowerShell 操作 Chocolatey](/2018/04/06/using-chocolatey-with-powershell)
+* [2018-04-09 用 Chocolatey 安装 PowerShell 6](/2018/04/09/installing-powershell-6-with-chocolatey)
+* [2018-04-10 创建十六进制数值](/2018/04/10/creating-hexadecimal-values)
+* [2018-04-11 清除当前用户的 Kerberos 票证](/2018/04/11/purging-kerberos-tickets-for-the-current-user)
+* [2018-04-12 清除所有账户的 Kerberos 票证](/2018/04/12/purging-kerberos-tickets-for-all-accounts)
