--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1204,3 +1204,4 @@ tags:
 * [2018-04-10 创建十六进制数值](/2018/04/10/creating-hexadecimal-values)
 * [2018-04-11 清除当前用户的 Kerberos 票证](/2018/04/11/purging-kerberos-tickets-for-the-current-user)
 * [2018-04-12 清除所有账户的 Kerberos 票证](/2018/04/12/purging-kerberos-tickets-for-all-accounts)
+* [2018-04-13 从 Internet 下载信息（第 1 部分）](/2018/04/13/downloading-information-from-internet-part-1)
