--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1205,3 +1205,4 @@ tags:
 * [2018-04-11 清除当前用户的 Kerberos 票证](/2018/04/11/purging-kerberos-tickets-for-the-current-user)
 * [2018-04-12 清除所有账户的 Kerberos 票证](/2018/04/12/purging-kerberos-tickets-for-all-accounts)
 * [2018-04-13 从 Internet 下载信息（第 1 部分）](/2018/04/13/downloading-information-from-internet-part-1)
+* [2018-04-16 从 Internet 下载信息（第 2 部分）](/2018/04/16/downloading-information-from-internet-part-2)
