--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1206,3 +1206,4 @@ tags:
 * [2018-04-12 清除所有账户的 Kerberos 票证](/2018/04/12/purging-kerberos-tickets-for-all-accounts)
 * [2018-04-13 从 Internet 下载信息（第 1 部分）](/2018/04/13/downloading-information-from-internet-part-1)
 * [2018-04-16 从 Internet 下载信息（第 2 部分）](/2018/04/16/downloading-information-from-internet-part-2)
+* [2018-04-17 ___](/powershell/tip/2018/04/17/downloading-information-from-internet-part-3)
