(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1207,3 +1207,7 @@ tags:
 * [2018-04-13 从 Internet 下载信息（第 1 部分）](/2018/04/13/downloading-information-from-internet-part-1)
 * [2018-04-16 从 Internet 下载信息（第 2 部分）](/2018/04/16/downloading-information-from-internet-part-2)
 * [2018-04-17 从 Internet 下载信息（第 3 部分）](/2018/04/17/downloading-information-from-internet-part-3)
+* [2018-04-18 从 Internet 下载信息（第 4 部分）](/2018/04/18/downloading-information-from-internet-part-4)
+* [2018-04-19 从 Internet 下载信息（第 5 部分）](/2018/04/19/downloading-information-from-internet-part-5)
+* [2018-04-20 从 Internet 下载信息（第 6 部分）](/2018/04/20/downloading-information-from-internet-part-6)
+* [2018-04-23 从 Internet 下载信息（第 7 部分）](/2018/04/23/downloading-information-from-internet-part-7)
