--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1211,3 +1211,4 @@ tags:
 * [2018-04-19 从 Internet 下载信息（第 5 部分）](/2018/04/19/downloading-information-from-internet-part-5)
 * [2018-04-20 从 Internet 下载信息（第 6 部分）](/2018/04/20/downloading-information-from-internet-part-6)
 * [2018-04-23 从 Internet 下载信息（第 7 部分）](/2018/04/23/downloading-information-from-internet-part-7)
+* [2018-04-24 从 Internet 下载信息（第 8 部分）](/2018/04/24/downloading-information-from-internet-part-8)
