(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1213,3 +1213,10 @@ tags:
 * [2018-04-23 从 Internet 下载信息（第 7 部分）](/2018/04/23/downloading-information-from-internet-part-7)
 * [2018-04-24 从 Internet 下载信息（第 8 部分）](/2018/04/24/downloading-information-from-internet-part-8)
 * [2018-04-25 转换错误记录](/2018/04/25/converting-error-records)
+* [2018-04-26 在 try/catch 中使用 ConvertFrom-ErrorRecord](/2018/04/26/using-convertfrom-errorrecord-in-try-catch)
+* [2018-04-27 允许远程处理](/2018/04/27/enabling-remoting)
+* [2018-04-30 列出属性和值（第 1 部分）](/2018/04/30/listing-properties-with-values-part-1)
+
+2018 年 05 月
+-------------
+* [2018-05-01 列出属性和值（第 2 部分）](/2018/05/01/listing-properties-with-values-part-2)
