(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1220,3 +1220,7 @@ tags:
 2018 年 05 月
 -------------
 * [2018-05-01 列出属性和值（第 2 部分）](/2018/05/01/listing-properties-with-values-part-2)
+* [2018-05-02 列出属性和值（第 3 部分）](/2018/05/02/listing-properties-with-values-part-3)
+* [2018-05-03 WMI 快速入门（第 1 部分）](/2018/05/03/wmi-quick-primer-part-1)
+* [2018-05-04 WMI 快速入门（第 2 部分）](/2018/05/04/wmi-quick-primer-part-2)
+* [2018-05-07 WMI 快速入门（第 3 部分）](/2018/05/07/wmi-quick-primer-part-3)
