(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1224,3 +1224,8 @@ tags:
 * [2018-05-03 WMI 快速入门（第 1 部分）](/2018/05/03/wmi-quick-primer-part-1)
 * [2018-05-04 WMI 快速入门（第 2 部分）](/2018/05/04/wmi-quick-primer-part-2)
 * [2018-05-07 WMI 快速入门（第 3 部分）](/2018/05/07/wmi-quick-primer-part-3)
+* [2018-05-08 WMI 快速入门（第 4 部分）](/2018/05/08/wmi-quick-primer-part-4)
+* [2018-05-09 测试 AD 用户是否存在](/2018/05/09/test-ad-user-exists)
+* [2018-05-10 通过 Windows 10 开始菜单快速打开 PowerShell](/2018/05/10/quickly-open-powershell-via-windows-10-start-menu)
+* [2018-05-11 创建 PowerShell 命令速查表（第 1 部分）](/2018/05/11/creating-powershell-command-cheat-sheets-part-1)
+* [2018-05-14 创建 PowerShell 命令速查表（第 2 部分）](/2018/05/14/creating-powershell-command-cheat-sheets-part-2)
