(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1229,3 +1229,7 @@ tags:
 * [2018-05-10 通过 Windows 10 开始菜单快速打开 PowerShell](/2018/05/10/quickly-open-powershell-via-windows-10-start-menu)
 * [2018-05-11 创建 PowerShell 命令速查表（第 1 部分）](/2018/05/11/creating-powershell-command-cheat-sheets-part-1)
 * [2018-05-14 创建 PowerShell 命令速查表（第 2 部分）](/2018/05/14/creating-powershell-command-cheat-sheets-part-2)
+* [2018-05-15 创建 PowerShell 命令速查表（第 3 部分）](/2018/05/15/creating-powershell-command-cheat-sheets-part-3)
+* [2018-05-16 创建 PowerShell 命令速查表（第 4 部分）](/2018/05/16/creating-powershell-command-cheat-sheets-part-4)
+* [2018-05-17 PowerShell 中打印表格（使用 WPF）](/2018/05/17/printing-tables-from-powershell-using-wpf)
+* [2018-05-18 使用免费的 PowerShell 陈列架（第 1 部分）](/2018/05/18/accessing-free-powershell-gallery-part-1)
