(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1233,3 +1233,6 @@ tags:
 * [2018-05-16 创建 PowerShell 命令速查表（第 4 部分）](/2018/05/16/creating-powershell-command-cheat-sheets-part-4)
 * [2018-05-17 PowerShell 中打印表格（使用 WPF）](/2018/05/17/printing-tables-from-powershell-using-wpf)
 * [2018-05-18 使用免费的 PowerShell 陈列架（第 1 部分）](/2018/05/18/accessing-free-powershell-gallery-part-1)
+* [2018-05-21 使用免费的 PowerShell 陈列架（第 2 部分）](/2018/05/21/accessing-free-powershell-gallery-part-2)
+* [2018-05-22 PowerShell 陈列架：创建 QR 码](/2018/05/22/powershell-gallery-creating-qr-codes)
+* [2018-05-23 PowerShell 陈列架：创建二维码 vCard](/2018/05/23/powershell-gallery-creating-qrcode-vcards)
