(auto commit message)

--- a/source/_posts/2013-09-09-index.md
+++ b/source/_posts/2013-09-09-index.md
@@ -1236,3 +1236,4 @@ tags:
 * [2018-05-21 使用免费的 PowerShell 陈列架（第 2 部分）](/2018/05/21/accessing-free-powershell-gallery-part-2)
 * [2018-05-22 PowerShell 陈列架：创建 QR 码](/2018/05/22/powershell-gallery-creating-qr-codes)
 * [2018-05-23 PowerShell 陈列架：创建二维码 vCard](/2018/05/23/powershell-gallery-creating-qrcode-vcards)
+* [2018-05-24 PowerShell 陈列架：创建地理位置二维码](/2018/05/24/powershell-gallery-creating-qr-geolocations)
